# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.3"
 info:
-  title: "microservices_manager API"
-  description: "microservices_manager API"
+  title: "Active Backend"
+  description: "Active Backend"
   version: "1.0.0"
 servers:
   - url: "https://microservices_manager"
@@ -163,6 +163,111 @@ paths:
             '*/*':
               schema:
                 type: "string"
+  /api/workout/record:
+    get:
+      summary: "GET api/workout/record"
+      operationId: "findByUser"
+      parameters:
+        - name: "page"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+            default: "0"
+        - name: "uid"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/WorkoutRecord"
+    post:
+      summary: "POST api/workout/record"
+      operationId: "createRecord"
+      parameters:
+        - name: "uid"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WorkoutRecordCreateRequest"
+        required: true
+      responses:
+        "201":
+          description: "Created"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+  /api/workout/record/{id}:
+    get:
+      summary: "GET api/workout/record/{id}"
+      operationId: "findById"
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/WorkoutRecord"
+  /api/workout:
+    post:
+      summary: "POST api/workout"
+      operationId: "createWorkout"
+      parameters:
+        - name: "uid"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WorkoutCreateRequest"
+        required: true
+      responses:
+        "201":
+          description: "Created"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+  /api/workout/:
+    get:
+      summary: "GET api/workout/"
+      operationId: "getWorkoutById"
+      parameters:
+        - name: "id"
+          in: "query"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Workout"
 components:
   schemas:
     UserRegisterRequest:
@@ -287,3 +392,71 @@ components:
             - "BEGINNER"
             - "INTERMEDIATE"
             - "EXPERT"
+    WorkoutRecord:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+        workoutId:
+          type: "string"
+        uid:
+          type: "string"
+        duration:
+          type: "integer"
+          format: "int32"
+        finishedAt:
+          type: "string"
+          format: "date-time"
+        exerciseRecordIds:
+          type: "array"
+          items:
+            type: "string"
+    WorkoutRecordCreateRequest:
+      type: "object"
+      properties:
+        workoutId:
+          type: "string"
+        duration:
+          type: "integer"
+          format: "int32"
+        exerciseRecordIds:
+          type: "array"
+          items:
+            type: "string"
+    WorkoutCreateRequest:
+      type: "object"
+      properties:
+        workoutStructureRecords:
+          type: "array"
+          items:
+            type: "string"
+        title:
+          type: "string"
+        createdBy:
+          type: "string"
+        updatedAt:
+          type: "string"
+    WorkoutStructure:
+      type: "object"
+      properties:
+        exerciseRecordIds:
+          type: "array"
+          items:
+            type: "string"
+    Workout:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+        workoutStructure:
+          $ref: "#/components/schemas/WorkoutStructure"
+        title:
+          type: "string"
+        createdBy:
+          type: "string"
+        createdAt:
+          type: "string"
+          format: "date-time"
+        updatedAt:
+          type: "string"
+          format: "date-time"
