# workout-service/src/main/java/com/active/workoutservice/workoutrecord/dto/WorkoutRecordCreateRequest.java
@@ -1,0 +1,16 @@
+package com.active.workoutservice.workoutrecord.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+
+import java.util.Date;
+
+@Data
+@AllArgsConstructor
+@Builder
+public class WorkoutRecordCreateRequest {
+    private String workoutId;
+    private int duration; // In seconds
+    private String[] exerciseRecordIds;
+}
